Fix kbd Tag color in dark mode
refs: TryGhost#13616
Fix the text color of the kdb tag in dark mode to dark text

--- a/app/styles/app-dark.css
+++ b/app/styles/app-dark.css
@@ -1012,3 +1012,7 @@ input:focus,
 .gh-filter-builder .gh-filters {
     background: var(--whitegrey);
 }
+
+kbd {
+    color: #394047;
+}
